<resources>
    <string name="app_name">Smart Meeting Room</string>
    <string name="app_name_full">Nokia Smart Meeting Room</string>
    <string name="room_firstfloor">First \nFloor</string>
    <string name="room_secondfloor">Second \nFloor</string>
    <string name="room_groundfloor">Ground
        \nFloor</string>
    <string name="room_fifthfloor">Fifth \nFloor</string>
    <string name="floor_view">Select A Floor</string>
    <string name="room_mensa">Mensa</string>
    <string name="room_musca">Musca</string>
    <string name="room_norma">Norma</string>
    <string name="room_lyra">Lyra(VC)</string>
    <string name="room_puppis">Puppis</string>
    <string name="room_scorpius">Scorpius</string>
    <string name="room_sagittarius">Sagittarius</string>
    <string name="room_volans">Volans(VC)</string>
    <string name="room_scutum">Scutum</string>
    <string name="room_lynx">Lynx</string>
    <string name="room_sydney">Sydney(VC)</string>
    <string name="ground_floor_view">Ground Floor</string>
    <string name="first_floor_view">First Floor</string>
    <string name="second_floor_view">Second Floor</string>
    <string name="fifth_floor_view">Fifth Floor</string>
    <string name="room_status">Get Status</string>
    <string name="tv_room_devicestatus">Room:_ _ _ _</string>
    <string name="tv_room_outlookstatus">Outlook:N/A</string>
    <string name="device_status_busy">Busy</string>
    <string name="device_status_free">Available</string>
    <string name="device_status_na">N/A</string>
    <string name="outlook_status_busy">Booked</string>
    <string name="outlook_status_free">Available</string>
    <string name="outlook_status_na">N/A</string>
    <string name="outlook_device_status_error">N/A</string>
    <string name="tv_room_time">Room NA:_ _ _ _</string>
    <string name="tv_room_book_room">Tap to Book Room</string>
    <string name="room_refresh">Refresh</string>
    <string name="current_date_time">Date/Time</string>
    <string name="room_green_boulevard">Green Boulevard Sector 62 Noida</string>
    <string name="menu_action_settings">Settings</string>
    <string name="menu_action_contactus">Contact Us/Feedback</string>
    <string name="menu_action_logout">Logout</string>
    <string name="menu_action_about">App Info</string>
    <string name="menu_action_about_text">SMR(Smart Meeting Room) Application
    \n\n\n\n version 2.0
        \n Build Date : 07-03-2019
        \n Copyright © Nokia 2019
    </string>
    <string name="menu_action_home">Home</string>
    <string name="menu_action_refresh">Refresh</string>
    <string name="menu_action_faq">FAQs</string>
    <string name="room_network_down">No response from Server,Please Try Again!!</string>
    <string name="room_no_internet_connection">No Internet Connection!!</string>
    <string name="spinner_title">Select Room</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>


</resources>
